--- a/ui/jupyter/kids/level1/io.ipynb
+++ b/ui/jupyter/kids/level1/io.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import\n",
+    "import level1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,13 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# These are setup code:\n",
-    "import level1\n",
-    "\n",
     "project = level1.FriendsCookieProj()"
    ]
   },
@@ -64,12 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "project.add_friends(['Mat','Jane','Philip','Chloe','Kate','Joel'])\n",
-    "project.add_cookies([10,10,10,10,10,10])"
+    "\n",
+    "# TODO: add number of cookies corresponding to the friends' name above\n",
+    "project.add_cookies([])"
    ]
   },
   {
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,14 +129,14 @@
        "    });\n",
        "</script>\n",
        "\n",
-       "    <div id=\"c9abc8d78dfd4085ba3fd84d6406fc35\" style=\"width:900px; height:400px;\"></div>\n",
+       "    <div id=\"514e419530c14ca69818f4192393ae01\" style=\"width:900px; height:400px;\"></div>\n",
        "\n",
        "\n",
        "<script>\n",
        "    require(['echarts'], function(echarts) {\n",
-       "        var chart_c9abc8d78dfd4085ba3fd84d6406fc35 = echarts.init(\n",
-       "            document.getElementById('c9abc8d78dfd4085ba3fd84d6406fc35'), 'white', {renderer: 'canvas'});\n",
-       "        var option_c9abc8d78dfd4085ba3fd84d6406fc35 = {\n",
+       "        var chart_514e419530c14ca69818f4192393ae01 = echarts.init(\n",
+       "            document.getElementById('514e419530c14ca69818f4192393ae01'), 'white', {renderer: 'canvas'});\n",
+       "        var option_514e419530c14ca69818f4192393ae01 = {\n",
        "    \"color\": [\n",
        "        \"#c23531\",\n",
        "        \"#2f4554\",\n",
@@ -157,14 +167,7 @@
        "        {\n",
        "            \"type\": \"bar\",\n",
        "            \"name\": \"Cookies\",\n",
-       "            \"data\": [\n",
-       "                10,\n",
-       "                10,\n",
-       "                10,\n",
-       "                10,\n",
-       "                10,\n",
-       "                10\n",
-       "            ],\n",
+       "            \"data\": [],\n",
        "            \"barCategoryGap\": \"20%\",\n",
        "            \"label\": {\n",
        "                \"show\": false,\n",
@@ -302,15 +305,312 @@
        "        \"zoomLock\": false\n",
        "    }\n",
        "};\n",
-       "        chart_c9abc8d78dfd4085ba3fd84d6406fc35.setOption(option_c9abc8d78dfd4085ba3fd84d6406fc35);\n",
+       "        chart_514e419530c14ca69818f4192393ae01.setOption(option_514e419530c14ca69818f4192393ae01);\n",
        "    });\n",
        "</script>\n"
       ],
       "text/plain": [
-       "<pyecharts.render.display.HTML at 0x67ad910>"
+       "<pyecharts.render.display.HTML at 0x13e46f0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project.get_output().render_notebook()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 输入的改变\n",
+    "\n",
+    "## Question\n",
+    "继上面的问题，现在老师多了10个小饼干，根据小朋友在课堂的表现奖励给小朋友，其中Mat得到1个，Jane得到3个，Philip得到1个，Kate得到1个，Joel得到4个。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# These are setup code:\n",
+    "project = level1.FriendsCookieProj()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project.add_friends(['Mat','Jane','Philip','Chloe','Kate','Joel'])\n",
+    "\n",
+    "# TODO: modify number of cookies corresponding to the friends' name above\n",
+    "project.add_cookies([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nothing to do\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('nothing to do')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    require.config({\n",
+       "        paths: {\n",
+       "            'echarts':'https://assets.pyecharts.org/assets/echarts.min'\n",
+       "        }\n",
+       "    });\n",
+       "</script>\n",
+       "\n",
+       "    <div id=\"8ab9278519ce48378dd2d3b918611e9f\" style=\"width:900px; height:400px;\"></div>\n",
+       "\n",
+       "\n",
+       "<script>\n",
+       "    require(['echarts'], function(echarts) {\n",
+       "        var chart_8ab9278519ce48378dd2d3b918611e9f = echarts.init(\n",
+       "            document.getElementById('8ab9278519ce48378dd2d3b918611e9f'), 'white', {renderer: 'canvas'});\n",
+       "        var option_8ab9278519ce48378dd2d3b918611e9f = {\n",
+       "    \"color\": [\n",
+       "        \"#c23531\",\n",
+       "        \"#2f4554\",\n",
+       "        \"#61a0a8\",\n",
+       "        \"#d48265\",\n",
+       "        \"#749f83\",\n",
+       "        \"#ca8622\",\n",
+       "        \"#bda29a\",\n",
+       "        \"#6e7074\",\n",
+       "        \"#546570\",\n",
+       "        \"#c4ccd3\",\n",
+       "        \"#f05b72\",\n",
+       "        \"#ef5b9c\",\n",
+       "        \"#f47920\",\n",
+       "        \"#905a3d\",\n",
+       "        \"#fab27b\",\n",
+       "        \"#2a5caa\",\n",
+       "        \"#444693\",\n",
+       "        \"#726930\",\n",
+       "        \"#b2d235\",\n",
+       "        \"#6d8346\",\n",
+       "        \"#ac6767\",\n",
+       "        \"#1d953f\",\n",
+       "        \"#6950a1\",\n",
+       "        \"#918597\"\n",
+       "    ],\n",
+       "    \"series\": [\n",
+       "        {\n",
+       "            \"type\": \"bar\",\n",
+       "            \"name\": \"Cookies\",\n",
+       "            \"data\": [],\n",
+       "            \"barCategoryGap\": \"20%\",\n",
+       "            \"label\": {\n",
+       "                \"show\": false,\n",
+       "                \"position\": \"top\",\n",
+       "                \"margin\": 8\n",
+       "            },\n",
+       "            \"rippleEffect\": {\n",
+       "                \"show\": true,\n",
+       "                \"brushType\": \"stroke\",\n",
+       "                \"scale\": 2.5,\n",
+       "                \"period\": 4\n",
+       "            }\n",
+       "        },\n",
+       "        {\n",
+       "            \"type\": \"bar\",\n",
+       "            \"name\": \"Cookies\",\n",
+       "            \"data\": [],\n",
+       "            \"barCategoryGap\": \"20%\",\n",
+       "            \"label\": {\n",
+       "                \"show\": false,\n",
+       "                \"position\": \"top\",\n",
+       "                \"margin\": 8\n",
+       "            },\n",
+       "            \"rippleEffect\": {\n",
+       "                \"show\": true,\n",
+       "                \"brushType\": \"stroke\",\n",
+       "                \"scale\": 2.5,\n",
+       "                \"period\": 4\n",
+       "            }\n",
+       "        }\n",
+       "    ],\n",
+       "    \"legend\": [\n",
+       "        {\n",
+       "            \"data\": [\n",
+       "                \"Cookies\",\n",
+       "                \"Cookies\"\n",
+       "            ],\n",
+       "            \"selected\": {\n",
+       "                \"Cookies\": true\n",
+       "            },\n",
+       "            \"show\": true\n",
+       "        }\n",
+       "    ],\n",
+       "    \"tooltip\": {\n",
+       "        \"show\": true,\n",
+       "        \"trigger\": \"item\",\n",
+       "        \"triggerOn\": \"mousemove|click\",\n",
+       "        \"axisPointer\": {\n",
+       "            \"type\": \"line\"\n",
+       "        },\n",
+       "        \"textStyle\": {\n",
+       "            \"fontSize\": 14\n",
+       "        },\n",
+       "        \"borderWidth\": 0\n",
+       "    },\n",
+       "    \"xAxis\": [\n",
+       "        {\n",
+       "            \"type\": \"category\",\n",
+       "            \"name\": \"Name\",\n",
+       "            \"show\": true,\n",
+       "            \"scale\": true,\n",
+       "            \"nameLocation\": \"end\",\n",
+       "            \"nameGap\": 15,\n",
+       "            \"gridIndex\": 0,\n",
+       "            \"inverse\": false,\n",
+       "            \"offset\": 0,\n",
+       "            \"splitNumber\": 5,\n",
+       "            \"minInterval\": 0,\n",
+       "            \"splitLine\": {\n",
+       "                \"show\": true,\n",
+       "                \"lineStyle\": {\n",
+       "                    \"width\": 1,\n",
+       "                    \"opacity\": 1,\n",
+       "                    \"curveness\": 0,\n",
+       "                    \"type\": \"solid\"\n",
+       "                }\n",
+       "            },\n",
+       "            \"data\": [\n",
+       "                \"Mat\",\n",
+       "                \"Jane\",\n",
+       "                \"Philip\",\n",
+       "                \"Chloe\",\n",
+       "                \"Kate\",\n",
+       "                \"Joel\"\n",
+       "            ]\n",
+       "        }\n",
+       "    ],\n",
+       "    \"yAxis\": [\n",
+       "        {\n",
+       "            \"name\": \"Cookies\",\n",
+       "            \"show\": true,\n",
+       "            \"scale\": true,\n",
+       "            \"nameLocation\": \"end\",\n",
+       "            \"nameGap\": 15,\n",
+       "            \"gridIndex\": 0,\n",
+       "            \"inverse\": false,\n",
+       "            \"offset\": 0,\n",
+       "            \"splitNumber\": 5,\n",
+       "            \"minInterval\": 0,\n",
+       "            \"splitLine\": {\n",
+       "                \"show\": true,\n",
+       "                \"lineStyle\": {\n",
+       "                    \"width\": 1,\n",
+       "                    \"opacity\": 1,\n",
+       "                    \"curveness\": 0,\n",
+       "                    \"type\": \"solid\"\n",
+       "                }\n",
+       "            }\n",
+       "        }\n",
+       "    ],\n",
+       "    \"title\": [\n",
+       "        {\n",
+       "            \"text\": \"Data Chart\"\n",
+       "        }\n",
+       "    ],\n",
+       "    \"toolbox\": {\n",
+       "        \"show\": true,\n",
+       "        \"orient\": \"horizontal\",\n",
+       "        \"itemSize\": 15,\n",
+       "        \"itemGap\": 10,\n",
+       "        \"left\": \"80%\",\n",
+       "        \"feature\": {\n",
+       "            \"saveAsImage\": {\n",
+       "                \"show\": true,\n",
+       "                \"title\": \"save as image\",\n",
+       "                \"type\": \"png\"\n",
+       "            },\n",
+       "            \"restore\": {\n",
+       "                \"show\": true,\n",
+       "                \"title\": \"restore\"\n",
+       "            },\n",
+       "            \"dataView\": {\n",
+       "                \"show\": true,\n",
+       "                \"title\": \"data view\",\n",
+       "                \"readOnly\": false\n",
+       "            },\n",
+       "            \"dataZoom\": {\n",
+       "                \"show\": true,\n",
+       "                \"title\": {\n",
+       "                    \"zoom\": \"data zoom\",\n",
+       "                    \"back\": \"data zoom restore\"\n",
+       "                }\n",
+       "            }\n",
+       "        }\n",
+       "    },\n",
+       "    \"dataZoom\": {\n",
+       "        \"show\": true,\n",
+       "        \"type\": \"slider\",\n",
+       "        \"realtime\": true,\n",
+       "        \"start\": 0,\n",
+       "        \"end\": 100,\n",
+       "        \"orient\": \"horizontal\",\n",
+       "        \"zoomLock\": false\n",
+       "    }\n",
+       "};\n",
+       "        chart_8ab9278519ce48378dd2d3b918611e9f.setOption(option_8ab9278519ce48378dd2d3b918611e9f);\n",
+       "    });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<pyecharts.render.display.HTML at 0x5af8930>"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
